--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@sweetalert2/themes": "^3.1.4",
     "@types/datatables.net-select": "^1.2.6",
     "@types/jquery": "^3.3.38",
     "bootstrap": "^4.5.0",
@@ -28,6 +29,7 @@
     "datatables.responsive.typings": "^1.0.3",
     "jquery": "^3.5.1",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^9.14.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
